--- a/index.html
+++ b/index.html
@@ -1,3 +1,37 @@
-
-Hello World
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8"></meta>
+    <title>Travel</title>
+    <link rel="stylesheet"  type="text/css"  href="style.css">
+  </head>
+  <body>
+    <div id="header">
+      <div id="logo">
+      </div>
+      <div id="myname">MongJu</div>
+      <div id="fb"></div>
+      <div id="ig"></div>
+      <div id="utube"></div>
+    </div>
+    <div id="content">
+      <div id="left">
+        <div id="name">Travel</div>
+        <div id="city">CITY</div>
+        <div id="paris">PARIS</div>
+        <div id="interface">Interface:</div>
+        <div id="context">The high Eiffel Tower, the colorful streets, the beautiful river Seine, the glorious palaces, the romantic people, the old history … Paris is a great place to all people in the world. <br>As the capital of France, Paris is a modern city with a long and rich history. So many events took place here and there are so many places for the visitors to have a trip. <br>The Eiffel Tower, which is 320 meters high, is the symbol of Paris. It was completed in 1889. 
+        </div>
+      </div>
+      <div id="city1">
+      La Tour Eiffel
+      </div>
+      <div id="city2">
+      Fuji
+      </div>
+      <div id="city3">
+      Great Barrier Reef
+      </div>
+    </div>
+  </body>
+</html>
