First github page

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div id="name">Travel</div>
         <div id="city">CITY</div>
         <div id="paris">PARIS</div>
-        <div id="interface">Interface:</div>
+        <div id="interface">Introduce:</div>
         <div id="context">The high Eiffel Tower, the colorful streets, the beautiful river Seine, the glorious palaces, the romantic people, the old history … Paris is a great place to all people in the world. <br>As the capital of France, Paris is a modern city with a long and rich history. So many events took place here and there are so many places for the visitors to have a trip. <br>The Eiffel Tower, which is 320 meters high, is the symbol of Paris. It was completed in 1889. 
         </div>
       </div>
