Second github page

--- a/tainan1.html
+++ b/tainan1.html
@@ -52,7 +52,7 @@
       </div>
       <div id ="tow">
         <div id ="picout2">
-        <a href="tainan2.html" >
+        <a href="https://e24051857.github.io/uidd2018/tainan2.html" >
           <div id ="pic2"></div>
         </a>
         </div>
@@ -66,12 +66,12 @@
         </div>
         <div id ="three">
           <div id ="feetout4">
-          <a href="tainan2.html" >
+          <a href="https://e24051857.github.io/uidd2018/tainan2.html" >
             <div id ="feet4"></div>
           </a>
           </div>
           <div id ="feetout5">
-          <a href="tainan2.html" >
+          <a href="https://e24051857.github.io/uidd2018/tainan2.html" >
             <div id ="feet5"></div>
           </a>
           </div>
