--- a/tainan2.html
+++ b/tainan2.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8"></meta>
     <link rel="stylesheet"  type="text/css"  href="style2.css">
-    <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.8.0.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
    <script>
    $(document).ready(function(){
    $("#box").click(function(){
