Second github page

--- a/tainan1.html
+++ b/tainan1.html
@@ -21,7 +21,8 @@
     $("#pic2").show("slow",function(){
     alert("點擊圖片進入天后宮！");
     });});});});});});});});});});});});});});
-    </script>
+  </script>
+  <title>趣台南</title>
   </head>
   <body>
     <div id ="left">
