--- a/tainan2.html
+++ b/tainan2.html
@@ -32,7 +32,8 @@
         $("#box").animate({left: "-=150px"},"slow",function(){
         $("#wood").animate({top: "+=180px"},"slow")
         });});});});});});
-    </script>
+      </script>
+      <title>趣台南</title>
   </head>
   <body>
   <div id="back">
